# Url-Shortener

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
urlshortener/: Makefile  settings.py
urlshortener/api/: routers.py  serializers.py  views.py
urlshortener/links/: admin.py  forms.py  models.py  urls.py  views.py
urlshortener/links/migrations/: 0001_initial.py
urlshortener/templates/: base_layout.html  homepage.html  login.html
urlshortener/templates/links/: shortener.html  sign_up.html
urlshortener/templates/urls/: shortener.html  urls_list.html
urlshortener/tests/: test_api  test_api.py  test_urls.py
urlshortener/tests/fixtures/: urls.json  users.json
urlshortener/urls/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
urlshortener/urlshortener/: settings.py  urls.py  views.py
