[project]
name = "linker"
version = "0.1.0"
description = "An easy-to-use URL-shortener."
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
]
