[project]
name = "linker"
version = "0.1.0"
description = "An easy-to-use URL-shortener."
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
readme = "README.md"
packages = [
  { include = "urlshortener" },
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "python-dotenv>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
]
